# almgren-chriss-optimal-execution

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
notebooks/: 01_model_intuition.ipynb  02_real_data_calibration.ipynb  03_strategy_comparison.ipynb
src/: __init__.py  almgren_chriss.py  data_fetcher.py  extensions.py  market_impact.py  simulator.py
tests/: test_model.py
